--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,4 +8,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
 
-      - run: dotnet build
+      - name: Setup
+        uses: actions/setup-dotnet@v1
+        with:
+          dotnet-version: '5.0.x'
+
+      - name: Build
+        run: dotnet build
