CSharp linter added

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,3 +15,15 @@ jobs:
 
       - name: Build
         run: dotnet build
+      
+      - name: Lint
+        run: |
+          dotnet tool install -g JetBrains.ReSharper.GlobalTools
+
+          declare -i SUCCESS=0
+          declare -i SEVERAL_ERRORS_IN_CSHARP_CODE=1
+
+          logs='logs.log'
+          jb inspectcode getcontent.sln -s=warning -o="$logs"
+          grep '<Issues />' "$logs" || exit "$SEVERAL_ERRORS_IN_CSHARP_CODE"
+          exit "$SUCCESS"
