--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,6 +1,10 @@
 name: CI
 on: [ pull_request, workflow_dispatch ]
 
+defaults:
+  run:
+    shell: bash
+
 jobs:
   buildandtest:
     runs-on: windows-2019
