--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,9 @@
 name: CI
-on: [ pull_request, workflow_dispatch ]
+on:
+  pull_request:
+    branches:
+      - master
+  workflow_dispatch:
 
 defaults:
   run:
